Fix issues where word-wrap wasn't wrapping as intended in Firefox and Edge (#4638)

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
@@ -55,10 +55,12 @@
   .bc-table-row-header {
     padding: math.div($base-spacing, 2) math.div($base-spacing, 4);
     display: flex;
+    display: -webkit-flex;
 
     code {
       text-decoration: none;
       white-space: normal;
+      word-wrap: anywhere;
     }
   }
 
